# Inside

./: ChangeLog.md  Inside.cabal  Makefile  README.md  device.conf  insideplot.sh  stack.yaml
app/: inside.hs  insideplotter.hs
src/Hardware/LakeShore/: TemperatureController.hs
src/Hardware/Leybold/: GraphixThree.hs
src/Hardware/Vacom/: Coldion.hs
src/Internal/: BinaryMessages.hs  Plotting.hs
src/Internal/UI/: Data.hs  EventHandling.hs  Parser.hs  Widgets.hs
web/: inside.html  reloader.js
