name: Inside
version: 1.3.0.1
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: 2018 Phillip Seeber
maintainer: phillip.seeber@uni-jena.de
homepage: https://github.com/sheepforce/Inside
bug-reports: https://github.com/sheepforce/Inside/issues
synopsis: monitoring conditions in UHV experiments
description:
    Please see the README on Github at <https://github.com/sheepforce/Inside/blob/master/README.md>
author: Author name here
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
    type: git
    location: https://github.com/sheepforce/Inside

library
    exposed-modules:
        Internal.BinaryMessages
        Internal.Plotting
        Internal.UI.Data
        Internal.UI.EventHandling
        Internal.UI.Widgets
        Internal.UI.Parser
        Hardware.Vacom.Coldion
        Hardware.LakeShore.TemperatureController
        Hardware.Leybold.GraphixThree
    build-depends:
        base >=4.7 && <5,
        hexstring >=0.11.1,
        bytestring >=0.10.8.0,
        bytestring-conversion >=0.2,
        serialport >=0.4.7,
        microlens >=0.4.8.1,
        microlens-th >=0.4.1.1,
        attoparsec >=0.13.1.0,
        either-unwrap >=1.1,
        Chart >=1.8.0,
        Chart-cairo >=1.8.0,
        text >=1.2.2.0,
        time >=1.6.0.0,
        directory >=1.3.0.0,
        brick >=0.18,
        vty >=5.16,
        either-unwrap >=1.1
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -O2

executable inside
    main-is: inside.hs
    build-depends:
        base >=4.7 && <5,
        brick >=0.18,
        text >=1.2.2.2,
        vty >=5.16,
        either-unwrap >=1.1,
        attoparsec >=0.13.1.0,
        Inside -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -Wall -threaded -O2

executable insideplotter
    main-is: insideplotter.hs
    build-depends:
        base >=4.7 && <5,
        cmdargs >=0.10.18,
        directory >=1.3.0.0,
        text >=1.2.2.0,
        attoparsec >=0.13.1.0,
        either-unwrap >=1.1,
        time >=1.6.0.0,
        Chart-cairo >=1.8.0,
        microlens >=0.4.8.1,
        Inside -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -Wall -threaded -O2
